--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Javascript -->
-        <script defer="./assets/js/script.js"></script>
+    <script defer="./assets/js/script.js"></script>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="equipoMedico.html">Equipo Medico</a>
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-outline-primary">Reserva tu cita</button>
+                <a type="button" class="btn btn-outline-primary" href="reserva.html">Reserva tu cita</a>
             </div>
         </div>
     </nav>
